# fabric_airflow_demo

./: .env  .gitignore  API_REFERENCE.md  CONFIG_GUIDE.md  CONTRIBUTING.md  README.md  bugs.txt  config.example.ini  pyproject.toml
old/: AirflowNativeApi.py  DataStructure.py  FabricClient.py  api_test.py  file_api_test.py  json.json  spn_info.txt
old/Jorge/: AirflowNativeApi.py  AuthProvider.py  FabricClient.py  FabricItemAPI.py
src/fabric/airflow/client/: airflow_api_client.py  airflow_control_plane_api.py  airflow_control_plane_model.py  airflow_files_api.py  airflow_native_api.py  authentication_provider.py  base_api_client.py  base_api_client_airflow.py  config.py  fabric_control_plane_api_client.py  fabric_crud_api_client.py  fabric_crud_model.py  fabric_files_api_client.py  fabric_item_api.py  fabric_model.py
src/fabric/airflow/client/share/: airflow_api_helper.py  api_exceptions.py  api_helper.py
src/fabric_airflow_client.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/sample/: airflow_definition.json  example_usage.py  sample_dag.py  update_airflow_definition.json
tests/: __init__.py  config.py  test_airflow_api_client.py  test_airflow_control_plane_api_pool_mgmt.py  test_files_api_client.py
tests/resources/: AKS_Status.py  AKS_pod_log.py  MyTestDag.py
